dead/test/invalid/break_outside_loop.c
int main() {
    if (0) {
        break;
    }
}